syntax = "proto3";

import "shared.proto";

option go_package = "github.com/penguin-statistics/livehouse/internal/model/pb";

service ConnectedLiveService {
    rpc PushReportBatch(ReportBatchRequest) returns (ReportBatchACK) {}
    rpc PushMatrixBatch(MatrixBatchRequest) returns (MatrixBatchACK) {}
}

message ReportBatchRequest {
    repeated Report reports = 1;
}

message ReportBatchACK {}

message Report {
    Server server = 1;
    uint64 generation = 2;
    uint32 stage_id = 3;
    repeated Drop drops = 4;
}

message Drop {
    uint32 item_id = 1;
    uint64 quantity = 2;
}

message MatrixBatchRequest {
    Server server = 1;
    uint64 generation = 2;
    repeated Matrix matrix = 3;
}

message MatrixBatchACK {
    uint64 generation = 1;
}

message Matrix {
    uint32 stage_id = 1;
    uint32 item_id = 2;
    uint64 quantity = 3;
    uint64 times = 4;
}
